<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sergio.examen2evmunicio.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/mainMenuText"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:text="@string/main_menu"/>

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_actividad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainMenuText"
        android:text="@string/weather"/>

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_actividad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atomic_data"
        android:layout_below="@id/btn_actividad1"/>

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_actividad3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multimedia"
        android:layout_below="@id/btn_actividad2"/>

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_salirMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
